# CSV_DataLoom

./: .gitignore  PROJECT_STATUS.md  README.md  app.py  debug_api.py  main.py  pyproject.toml  requirements.txt  start.bat  streamlit_app.py  test_data.csv
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/specs/data-export/: spec.md
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/specs/data-import/: spec.md
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/specs/data-preview/: spec.md
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/specs/sql-editor/: spec.md
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/specs/table-management/: spec.md
openspec/changes/archive/2026-05-09-local-data-dual-mode-workbench/specs/visual-canvas/: spec.md
src/core/: duckdb_manager.py
src/ui/: left_panel.py  middle_panel.py  right_panel.py
src/ui/visual/: __init__.py  canvas_component.py  sql_editor_component.py
src/utils/: sql_generator.py  test_runner.py
src/utils/canvas/: __init__.py  sql_generator.py
